Swagger GetCourseByName()
